--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dependencies": {
         "express": "^4.16.1",
         "firebase-admin": "^5.3.0",
-        "socket.io": "^2.0.3"
+        "socket.io": "^2.0.3",
+        "tmp": "0.0.33"
     }
 }
